--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@cloudparker/easy-color-picker-svelte",
-	"version": "0.0.3",
+	"version": "1.0.0",
 	"author": "cloudparker.com",
 	"license": "MIT",
 	"keywords": [
@@ -47,6 +47,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"publint": "^0.1.9",
+		"sass": "^1.60.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
