--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cloudparker/easy-color-picker-svelte",
-    "version": "1.4.0",
+    "version": "2.0.0",
     "author": "cloudparker.com",
     "license": "MIT",
     "keywords": [
@@ -24,6 +24,6 @@
     "svelte": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "peerDependencies": {
-        "svelte": "^4.2.11"
+        "svelte": "^5.0.0-next.1"
     }
 }
